# mesh-tools

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
samples/: normalize.toml
src/: dates.py  types.py
src/construct/: engine.py  types.py
src/mapping/: basic.py  dates.py  mapper.py  names.py  test_basic_mappers.py  test_dates.py  test_names.py
src/scripts/: __init__.py
src/scripts/filterjson/: __init__.py
src/scripts/neo4j/: __init__.py  merger.py
