[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-tools"
description = "Tools for dealing with mesh (disclosed)"
version = "0.0.1"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "neo4j >= 5",
    "tomlkit"
]
authors = [{ name = "Maciej Misiołek", email = "mahlcjani@proton.me" }]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[project.scripts]
filterjson = "meshtools.scripts.filterjson:filterjson"
cypher-run = "meshtools.scripts.neo4j:cypher_run"
import-term = "meshtools.scripts.neo4j:import_term"

[project.urls]
Homepage = "https://github.com/mahlcjani/mesh-tools"

[tool.setuptools]
package-dir = { "meshtools" = "src" }

